[package]
name = "notion-calendar-fermyon"
authors = ["Daniel Hahne <d@niel.re>"]
description = "Return calendar in ical or org format."
version = "0.0.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
http = "0.2.9"
notion-calendar = { git = "https://github.com/trobanga/notion-calendar" }
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
uuid = "1.7.0"

[workspace]
